--- a/EmployeeService/dockerfile
+++ b/EmployeeService/dockerfile
@@ -7,5 +7,5 @@ RUN mvn clean package
 FROM openjdk:17-jdk-alpine
 VOLUME /tmp
 ARG JAR_FILE=target/*.jar
-COPY ${JAR_FILE} spring-learn-0.0.1-SNAPSHOT
+COPY ${JAR_FILE} spring-learn-0.0.1-SNAPSHOT.jar
 ENTRYPOINT ["java","-jar","/spring-learn-0.0.1-SNAPSHOT.jar"]
